[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'subancor-node-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.subancor-node-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['subancor-node-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
